# laptop-sales-agent

./: .gitignore  README.md  agent.py  cli.py  core.py  filter.py  mcp_server.py  pyproject.toml  scoring.py  sys_req_lookup_tool.py  test.py  tests.py
pre_processing/: adding_tiers.py  augment.ipynb  augment.py  remove_extra_cols.py
results/: initial_results.md  more_results.md  results_cli.md  results_from_test.md  results_from_tests.md  results_interaction_with_memory.md  results_with_debugging.md
